--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "balance-text": "^3.2.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-less": "^2.0.5",
@@ -11,7 +12,7 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^1.6.46",
-    "gatsby-source-contentful": "^2.0.4",
+    "gatsby-source-contentful": "^2.0.7",
     "gatsby-transformer-remark": "^1.7.44",
     "gatsby-transformer-sharp": "^2.1.3",
     "less": "^3.8.1",
