--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "gatsby-starter-default",
   "description": "Gatsby default starter",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Andrew Folts <andrew@sherpadesign.co>",
   "dependencies": {
     "balance-text": "^3.2.1",
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-less": "^2.0.5",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^1.6.46",
-    "gatsby-source-contentful": "^2.0.7",
-    "gatsby-transformer-remark": "^1.7.44",
-    "gatsby-transformer-sharp": "^2.1.3",
+    "gatsby": "^2.0.33",
+    "gatsby-image": "^2.0.18",
+    "gatsby-plugin-less": "^2.0.7",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.10",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-sharp": "^2.0.10",
+    "gatsby-source-contentful": "^2.0.9",
+    "gatsby-transformer-remark": "^2.1.11",
+    "gatsby-transformer-sharp": "^2.1.7",
     "less": "^3.8.1",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "yetti": "^1.1.11"
   },
