--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-offline": "^2.0.10",
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-sharp": "^2.0.10",
+    "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-source-contentful": "^2.0.9",
     "gatsby-source-eventbrite": "^1.0.2",
     "gatsby-transformer-remark": "^2.1.11",
